--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,14 @@
           href="src/assets/images/logo-link.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PetLink</title>
+
+    <script>
+      const theme = localStorage.getItem('theme');
+      if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+        document.documentElement.classList.add('dark');
+      }
+    </script>
+
   </head>
   <body>
     <div id="root"></div>
